--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="player">#3273a8</color>
+    <color name="coin">#dbc902</color>
+    <color name="track">#bdbdbd</color>
 </resources>
