--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="player">#3273a8</color>
     <color name="coin">#dbc902</color>
     <color name="track">#bdbdbd</color>
+    <color name="obstacle">#6e6e6e</color>
 </resources>
