Added arrows for car selection, added car selection, added shop logic and display, added coins and highscore display, implemented buying of cars, implemented car selection, fixed bugs with car selection and car ingame, added rampup with car speeds correctly, made game cap at a certain speed, made game fixed in portrait mode, deactivated screenoff

--- a/app/src/main/res/layout/fragment_shop.xml
+++ b/app/src/main/res/layout/fragment_shop.xml
@@ -6,17 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".ui.shop.ShopFragment">
 
-    <TextView
-        android:id="@+id/text_shop"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
+    <LinearLayout
+        android:id="@+id/carLayout"
+        android:layout_width="368dp"
+        android:layout_height="532dp"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.718">
+
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
