--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,21 +7,65 @@
     tools:context=".ui.home.HomeFragment">
 
     <LinearLayout
-        android:layout_width="317dp"
-        android:layout_height="384dp"
+        android:id="@+id/linearLayout"
+        android:layout_width="305dp"
+        android:layout_height="193dp"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498">
+        app:layout_constraintVertical_bias="0.0">
 
         <Button
-            android:onClick="startGame"
             android:id="@+id/startGame"
             android:layout_width="243dp"
             android:layout_height="wrap_content"
+            android:onClick="startGame"
             android:text="@string/start_game_button" />
+
     </LinearLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="342dp"
+        android:layout_height="481dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+
+        <SurfaceView
+            android:id="@+id/carSelectionSurfaceView"
+            android:layout_width="217dp"
+            android:layout_height="133dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:layout_editor_absoluteY="78dp" />
+
+        <Button
+            android:id="@+id/leftButton"
+            android:layout_width="43dp"
+            android:layout_height="37dp"
+            android:layout_weight="1"
+            android:text="@string/arrow_left"
+            app:layout_constraintEnd_toStartOf="@+id/carSelectionSurfaceView"
+            app:layout_constraintHorizontal_bias="0.842"
+            app:layout_constraintStart_toStartOf="parent"
+            android:onClick="selectedCarIndexDecrease"
+            tools:layout_editor_absoluteY="127dp" />
+
+        <Button
+            android:id="@+id/rightButton"
+            android:layout_width="43dp"
+            android:layout_height="37dp"
+            android:layout_weight="1"
+            android:text="@string/arrow_right"
+            android:onClick="selectedCarIndexIncrease"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.2"
+            app:layout_constraintStart_toEndOf="@+id/carSelectionSurfaceView"
+            tools:layout_editor_absoluteY="127dp" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
